# blog-image-processor

./: .gitignore  LICENSE  README.md  pyproject.toml
lambda/: handler.py  requirements.txt
lambda/tests/: test_handler.py
scripts/: upload-blog-image.sh
terraform/: lambda.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
