[project]
name = "blog-image-processor"
version = "0.1.0"
description = "Lambda that converts blog images to webp and generates <picture> HTML snippets"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "aws-lambda-powertools[tracer]>=3.25.0",
    "boto3>=1.42.68",
    "moto>=5.1.22",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
]
